# ytt

./: .env.example  .gitignore  README.md  app.py  install_service.bat  install_service_linux.sh  pyproject.toml  restart_service.bat  server.py  service.py  setup.ps1  setup.sh  uninstall_service.bat  youtube-transcriber.service
browser_extensions/YoutubeTranscriber/: background.js  popup.html  transcript.js
browser_extensions/firefox/YoutubeTranscriber/: README.md  manifest.json  popup.js  transcript.html
browser_extensions/firefox/YoutubeTranscriber/extension_package/: youtube_transcriber-1.0.xpi
